# fastapi_zero

./: README.md  database.db  pyproject.toml
app/: main.py  models.py  schemas.py  security.py
app/migrations/: env.py
app/migrations/versions/: 125804aa1cb8_update_em_colum_upgrade.py  21b78c21a5cc_add_default_to_updated_at.py  3d64baa2cf8a_update_em_colum_upgrade.py  441e574458ff_fix_updated_at_default.py  5787c8cbbb39_delete_cpf.py  a5e460c5bc8a_create_cpf.py  c567b0742304_init.py  d5751135f4ca_add_default_to_updated_at.py
app/routers/auth/: auth.py
app/routers/users/: users.py
app/test/: conftest.py  database.db  test_db.py  test_main.py  test_security.py
app/test/test_auth/: test_auth.py
app/test/test_users/: test_users.py
